# quiz

./: README.md
api/: .env  Cargo.toml  README.md  docker-compose.yml
api/migrations/: 20211216162401_questions.sql  20211221163237_sample_questions.sql  20211221175931_sample_quiz.sql  20211224075322_sessions.sql  20211224082943_player_finished.sql  20211224084405_player_name.sql  20211227064043_session_host.sql
api/src/: main.rs
api/src/api/: mod.rs
api/src/db/: mod.rs
api/src/ws/: mod.rs
frontend/: package.json
frontend/components/: Quiz.tsx  index.ts
frontend/components/websocket/: websocket.tsx
frontend/pages/: index.tsx
frontend/pages/quiz/: [id].tsx  new.tsx
frontend/pages/quiz/[id]/: questions.tsx
frontend/pages/quiz/styles/: NewQuiz.module.css
frontend/pages/session/: [id].tsx
frontend/pages/session/[id]/: [player].tsx
frontend/pages/session/new/: [quizid].tsx
frontend/styles/: Quiz.module.css  globals.css
